make-a-wish-salesforce/src/objects/Endpoints__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hiearchy setting to store cutom urls</description>
    <fields>
        <fullName>DVReturn_URL__c</fullName>
        <description>Return URL for DV&apos;s</description>
        <label>DV Return URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <description>Holds this orgs instance url</description>
        <label>Instance URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <description>Volunteer portal URL</description>
        <label>Site URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Endpoints</label>
</CustomObject>